Added link to impresssum and restored contact header

--- a/index.html
+++ b/index.html
@@ -5,45 +5,63 @@
 		<title>understand.ai</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Get unique insights about your data with our machine learning algorithms.">
+		<meta name="description" content="High quality data annotation to boost your machine learning algorithms.">
 		<meta property="og:title" content="understand.ai" />
-		<meta property="og:description" content="Get unique insights about your data with our machine learning algorithms." />
+		<meta property="og:description" content="High quality data annotation to boost your machine learning algorithms." />
 		<meta property="og:image" content="images/banner.jpg" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
+
+
+
+			<!-- Header -->
 			<header id="header">
-				<!-- <h1><a href="index.html">Alpha</a> by HTML5 UP</h1> -->
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="mailto:info@understand.ai">Contact</a></li>
-					</ul>
-				</nav>
-			</header>
+					<!-- <h1><a href="index.html">Alpha</a> by HTML5 UP</h1> -->
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="mailto:info@understand.ai">Contact</a></li>
+						</ul>
+					</nav>
+				</header>
+
+			<!-- Banner -->
 
 				<section id="banner">
 					<h2>understand.ai</h2>
 					<p>We <span class="element"></span> your data</p>
+					<!-- <p>we make your data useful</p> -->
 					<ul class="actions">
-						<li><a id="demo-request" href="#" class="button special" data-toggle="modal" data-target="#myModal">Contact us now</a></li>
+						<!-- Trigger the modal with a button -->
+<!-- <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button> -->
+ 						<!-- <li><a href="#" class="button special lightbox-61724662942359" data-toggle="modal" data-target="#myModal">Request free demo</a></li> -->
+						<li><a id="demo-request" href="#" class="button special" data-toggle="modal" data-target="#myModal">Request free demo</a></li>
+						<!-- <li><a href="#" class="button">Learn More</a></li> -->
 					</ul>
 				</section>
 
+
+
 			<!-- Main -->
 				<section id="main" class="container">
+
 					<section class="box special">
 						<header class="major">
-							<h2>Get the best out of your sensors
+							<h2>Get the best out of your algorithms
 							<br />
-							with deep learning</h2>
-							<p>Data can be anything from video images to IoT sensor data.<br />
-							 With our deep learning models we analyze and find patterns in your data.<br />
-						  That way we can automatically tag images or video sequences, predict sensor failure and notify you in advance. </p>
+							with high quality data annotation</h2>
+							<!-- From data to insights. -->
+							<!-- <p>Give us your raw unlabeled data<br />
+							we structure, annotate, tag and categorize your data.</p> -->
+							<p>Let's be honest. You just want to run your fancy machine learning algorithms, right?<br />
+							 But there is this huge amount of unlabeled data which stands in your way.<br />
+						  We got you covered: we structure, annotate, tag and categorize your data tailored to your needs. </p>
 						</header>
 
 					</section>
@@ -52,23 +70,23 @@
 						<p> Eric Schmidt, Google, about the perfect future company </p>
 					</section>
 					<section class="box special features">
-						<h2>Get your analyzed data in 3 steps:</h2>
+						<h2>Get your labeled data in 3 steps:</h2>
 						<br/>
 						<div class="row">
 						  <div class="col-md-4">
 								<span class="icon major accent2"><h2>1</h2></span>
-								<h3>Send or stream us your data</h3>
-								<p>Upload your data to our servers using a secure connection. At any time we guarantee data security and confidentiality.</p>
+								<h3>Send us your data</h3>
+								<p>Send us a link to your data or upload your data to our servers using a secure connection. At any time we guarantee data security and confidentiality.</p>
 							</div>
 							<div class="col-md-4">
 								<span class="icon major accent5"><h2>2</h2></span>
-								<h3>Your data gets analyzed</h3>
-								<p>Our customized Machine Learning models detect patterns in the data (e.g. recogntion of specific actions in a video).</p>
+								<h3>We understand your data</h3>
+								<p>By combining customized machine learning methods and human intelligence, we annotate your data.</p>
 							</div>
 							<div class="col-md-4">
 								<span class="icon major accent3"><h2>3</h2></span>
-								<h3>Get your analyzed data</h3>
-								<p>Receive the results like a tag what happened in the video or notifications about future sensor failure. And all that in a matter of seconds.</p>
+								<h3>Get back your data</h3>
+								<p>Now you can download your labeled and structured data and get started working on your actual project. It's that simple.</p>
 							</div>
 						</div>
 <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
@@ -79,19 +97,19 @@
 							<section>
 								<span class="icon major fa-bolt accent2"></span>
 								<h3>Fast</h3>
-								<p>Speed makes the difference. Listen to your sensor data and don't wait until your machines break.</p>
+								<p>Speed makes the difference. Don't wait until your interns finish their labeling work. Our qualified crowd delivers you results at highspeed.</p>
 							</section>
 							<section>
 								<span class="icon major fa-area-chart accent3"></span>
-								<h3>Automatic</h3>
-								<p>After an initial training phase our self learning algorithms adopt to your problem automatically.</p>
+								<h3>Reliable</h3>
+								<p>Quality is key! Don't spend hours of reviewing your labeled data. With our final in house quaility control step we make sure you get high quality results.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-cloud accent4"></span>
 								<h3>Cost effective</h3>
-								<p>Monitoring millions of sensors or cameras can be expensive. With our algorithms you keep track of all of them at low cost.</p>
+								<p>Combining our machine learning algorithms with our crowd gives you the most cost effective way to label your data.</p>
 							</section>
 							<section>
 								<span class="icon major fa-lock accent5"></span>
@@ -105,50 +123,36 @@
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/inspection.jpg" alt="" /></span>
-								<h3>Inspection and Quality Control</h3>
-								<p>A lot of the inspection and quality control work is still done manually. We can speed this process up with our visual inspection machine learning algorithms.</p>
+								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
+								<h3>Use case: Autonomous driving</h3>
+								<p>With the help of understand.ai an autonomous driving company can label the video and images which were recorded while driving. This groundtruth is the base for training a passenger or lane detection algorithm.</p>
+								<!-- <ul class="actions">
+									<li><a href="#" class="button alt">Learn More</a></li>
+								</ul> -->
 							</section>
 
 						</div>
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/fashion.jpg" alt="" /></span>
-								<h3>Image classification</h3>
-								<p>We can automatically detect what kind of material is on the picture. This algorithm is so generic that it can be trained to recognize other never seen classes (e.g. fruits) with very little additional training.</p>
-							</section>
-
-						</div>
-
-					</div>
-					<div class="row">
-						<div class="6u 12u(narrower)">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/server.jpg" alt="" /></span>
-								<h3>Predictive Maintenance</h3>
-								<p>We analyze your sensor data to find patterns which can for example indicate future failure of machines.</p>
-							</section>
-
-						</div>
-						<div class="6u 12u(narrower)">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/medical.jpg" alt="" /></span>
-								<h3>Use case: Image analysis</h3>
-								<p>We analyze your medical images to detect diseases as early as possible and support the doctors in their analysis.</p>
+								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
+								<h3>Use case: Medicine</h3>
+								<p>In computer assisted surgery it's important to detect the surgery tools in the images. With understand.ai it is easy to get hundred thousands of labeled images where the tool is clearly marked.</p>
+								<!-- <ul class="actions">
+									<li><a href="#" class="button alt">Learn More</a></li>
+								</ul> -->
 							</section>
 
 						</div>
 					</div>
+
 				</section>
 
 			<!-- CTA -->
 				<section id="cta">
 
 					<h2>Get in contact now</h2>
-					<p>Concentrate on what you can do best and let us analyze your data.</p>
+					<p>Concentrate on what you can do best and let us annotate your data.</p>
 					<br />
 					<form>
 						<div class="row uniform 50%">
@@ -160,50 +164,33 @@
 
 								<input id="demo-request" type="button" value="Request free demo" class="fit" class="button special lightbox-61724662942359" data-toggle="modal" data-target="#myModal"/>
 							</div>
-
 						</div>
 					</form>
-					<p> or send us an <a href="mailto:info@understand.ai">email</a>
+
 				</section>
 
 
 			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-						<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
-						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
-						<!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li> -->
-						<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-						<!-- <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
-					</ul>
-					<ul class="copyright">
-						<li><a href="mailto:info@understand.ai">Contact</a></li>
-						<li><a href="./imprint.html">Imprint</a></li>
-						<li>&copy; understand.ai. All rights reserved.</li>
-					</ul>
-				</footer>
+			<footer id="footer">
+								<ul class="icons">
+									<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+									<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+									<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+									<!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li> -->
+									<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+									<!-- <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
+								</ul>
+								<ul class="copyright">
+									<li><a href="mailto:info@understand.ai">Contact</a></li>
+									<li><a href="./imprint.html">Imprint</a></li>
+									<li>&copy; understand.ai. All rights reserved.</li>
+								</ul>
+							</footer>
 
 		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script>
-	// Set to the same value as the web property used on the site
-	var gaProperty = 'UA-79651140-1';
-
-	// Disable tracking if the opt-out cookie exists.
-	var disableStr = 'ga-disable-' + gaProperty;
-	if (document.cookie.indexOf(disableStr + '=true') > -1) {
-		window[disableStr] = true;
-	}
-
-	// Opt-out function
-	function gaOptout() {
-		document.cookie = disableStr + '=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
-		window[disableStr] = true;
-	}
-	</script>
 			<script>
 			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -211,7 +198,6 @@
 			  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 			  ga('create', 'UA-79651140-1', 'auto');
-				ga('set', 'anonymizeIp', true);
 			  ga('send', 'pageview');
 
 			</script>
@@ -226,14 +212,13 @@
 			<script>
 					$(function(){
 							$(".element").typed({
-									strings: ["classify", "tag", "recognize", "label", "identify", "caption", "rate", "parse"],
+									strings: ["classify", "tag", "annotate", "label", "identify", "caption", "rate", "parse"],
 									typeSpeed: 0,
 									loop: true,
 							});
 					});
 			</script>
 			<script src="assets/js/googleanalytics.js"></script>
-
 			<div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
@@ -241,9 +226,29 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <!-- <h4 class="modal-title">Give us a taste of your data</h4> -->
       </div>
       <div class="modal-body">
 				<script type="text/javascript" src="https://form.jotformeu.com/jsform/61724662942359"></script>
+        <!-- <p>Upload a sample of your data and get it labeled for free. Max 100 images or 100 csv rows.</p>
+				<form action="https://getsimpleform.com/messages?form_api_token=acd9ad0f4fa3cdb323880aaac1beef11" method="post">
+					<!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+					<!-- <input type='hidden' name='redirect_to' value='https://0rland0.github.com/uploaded.html' />
+					<!-- all your input fields here.... -->
+					<!-- <label>Sample data if available (CSV, zip, ...)</label>
+					<input type="file" name="sample-data" class="form-control">
+					<label>How should the result look like?</label>
+					<input type='text' name='task-description' placeholder='E.g. each image should be labeled as cat or dog' />
+					<label>Your name?</label>
+					<input type='text' name='name' placeholder='e.g. John Doe'/>
+					<label>Company Name</label>
+					<input type='text' name='company-name' placeholder='e.g. Willy Wonka Inc.'/>
+					<label>Phone number</label>
+					<input type='text' name='phone-number' placeholder='e.g. +49 176 41648137' />
+					<label>Email</label>
+					<input type='text' name='email' placeholder='e.g. foo@bar.com'/>
+					<input type='submit' value='Submit' />
+				</form> -->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
