--- a/index.html
+++ b/index.html
@@ -1,261 +1,216 @@
 <!DOCTYPE HTML>
+<html lang="en">
 
-<html>
-	<head>
-		<title>understand.ai</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="High quality data annotation to boost your machine learning algorithms.">
-		<meta property="og:title" content="understand.ai" />
-		<meta property="og:description" content="High quality data annotation to boost your machine learning algorithms." />
-		<meta property="og:image" content="images/banner.jpg" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+<head>
+	<title>understand.ai</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="Embrace the power of data with high quality data annotation to boost your machine learning algorithms.">
+	<meta property="og:title" content="understand.ai" />
+	<meta property="og:description" content="High quality data annotation to boost your machine learning algorithms." />
+	<meta property="og:image" content="images/banner.jpg" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<script src="http://email.tl.fortawesome.com/c/eJxNjUEOgyAQRU8jSzIzouCCRZOm9xhhiDaKDWB6_bJs8vMWf_Fe9FHmKFbtngBnxE4cLYBGstZ0OuM0TmjoiTgYaIdOV2n8lXqdosN1qs1HSABuldWtc7QcSMaE0zIxEpFlUoffWvvUYXwM9Oq7q3RN_tf0Nzg27JZgQb-rKj4dV9k59-qdo5TaOEfN-w_GczYM"></script>
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
 
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body class="landing">
-		<div id="page-wrapper">
+<body class="landing">
+	<div id="page-wrapper">
 
+		<!-- Header -->
+		<header id="header">
+			<h2><a href="index.html">understand.ai</a></h2>
+			<nav id="nav">
+				<ul>
+					<!-- <li><a href="#demo">Product</a></li> -->
+					<li><a href="#start">Get Started</a></li>
+					<!-- <li><a href="/about.html">About us</a></li> -->
+					<li><a href="#cta">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 
+		<!-- Banner -->
 
-			<!-- Header -->
-			<header id="header">
-					<!-- <h1><a href="index.html">Alpha</a> by HTML5 UP</h1> -->
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="mailto:info@understand.ai">Contact</a></li>
-						</ul>
-					</nav>
-				</header>
+		<section id="banner">
+			<h2>Embrace the power of data</h2>
+			<p>We <span class="element"></span> data</p>
+			<ul class="actions">
+				<!-- Trigger the modal with a button -->
+				<li><a href="#cta" class="button special" data-toggle="modal" data-target="#myModal">Request free demo</a></li>
+			</ul>
+		</section>
 
-			<!-- Banner -->
-
-				<section id="banner">
-					<h2>understand.ai</h2>
-					<p>We <span class="element"></span> your data</p>
-					<!-- <p>we make your data useful</p> -->
-					<ul class="actions">
-						<!-- Trigger the modal with a button -->
-<!-- <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button> -->
- 						<!-- <li><a href="#" class="button special lightbox-61724662942359" data-toggle="modal" data-target="#myModal">Request free demo</a></li> -->
-						<li><a id="demo-request" href="#" class="button special" data-toggle="modal" data-target="#myModal">Request free demo</a></li>
-						<!-- <li><a href="#" class="button">Learn More</a></li> -->
-					</ul>
-				</section>
-
-
-
-			<!-- Main -->
-				<section id="main" class="container">
-
-					<section class="box special">
-						<header class="major">
-							<h2>Get the best out of your algorithms
+		<!-- Main -->
+		<section id="main" class="container">
+			<section class="box special">
+				<header class="major">
+					<h2>Get the best out of your algorithms
 							<br />
 							with high quality data annotation</h2>
-							<!-- From data to insights. -->
-							<!-- <p>Give us your raw unlabeled data<br />
-							we structure, annotate, tag and categorize your data.</p> -->
-							<p>Let's be honest. You just want to run your fancy machine learning algorithms, right?<br />
-							 But there is this huge amount of unlabeled data which stands in your way.<br />
-						  We got you covered: we structure, annotate, tag and categorize your data tailored to your needs. </p>
-						</header>
+					<p>Let's be honest. You just want to run your fancy machine learning algorithms, right?<br /> But there is this huge amount of unlabeled data which stands in your way.<br /> We got you covered: we structure, annotate, tag and categorize your data tailored
+						to your needs. </p>
+				</header>
+			</section>
+			<!-- <section id="product" class="box special features">
+				<h2>Products</h2>
+			</section> -->
 
-					</section>
-					<section  class="crowd">
-						<h2>"A good company would use Android, iOS, and machine learning but use the <bold>crowd</bold> to learn something trivial."</h2>
-						<p> Eric Schmidt, Google, about the perfect future company </p>
-					</section>
-					<section class="box special features">
-						<h2>Get your labeled data in 3 steps:</h2>
-						<br/>
-						<div class="row">
-						  <div class="col-md-4">
-								<span class="icon major accent2"><h2>1</h2></span>
-								<h3>Send us your data</h3>
-								<p>Send us a link to your data or upload your data to our servers using a secure connection. At any time we guarantee data security and confidentiality.</p>
-							</div>
-							<div class="col-md-4">
-								<span class="icon major accent5"><h2>2</h2></span>
-								<h3>We understand your data</h3>
-								<p>By combining customized machine learning methods and human intelligence, we annotate your data.</p>
-							</div>
-							<div class="col-md-4">
-								<span class="icon major accent3"><h2>3</h2></span>
-								<h3>Get back your data</h3>
-								<p>Now you can download your labeled and structured data and get started working on your actual project. It's that simple.</p>
-							</div>
-						</div>
-<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-					</section>
-
-					<section class="box special features">
-						<div class="features-row">
-							<section>
-								<span class="icon major fa-bolt accent2"></span>
-								<h3>Fast</h3>
-								<p>Speed makes the difference. Don't wait until your interns finish their labeling work. Our qualified crowd delivers you results at highspeed.</p>
-							</section>
-							<section>
-								<span class="icon major fa-area-chart accent3"></span>
-								<h3>Reliable</h3>
-								<p>Quality is key! Don't spend hours of reviewing your labeled data. With our final in house quaility control step we make sure you get high quality results.</p>
-							</section>
-						</div>
-						<div class="features-row">
-							<section>
-								<span class="icon major fa-cloud accent4"></span>
-								<h3>Cost effective</h3>
-								<p>Combining our machine learning algorithms with our crowd gives you the most cost effective way to label your data.</p>
-							</section>
-							<section>
-								<span class="icon major fa-lock accent5"></span>
-								<h3>Secure</h3>
-								<p>No worries about privacy and data protection. We put high effort in securing your data from end to end.</p>
-							</section>
-						</div>
-					</section>
-
-					<div class="row">
-						<div class="6u 12u(narrower)">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Use case: Autonomous driving</h3>
-								<p>With the help of understand.ai an autonomous driving company can label the video and images which were recorded while driving. This groundtruth is the base for training a passenger or lane detection algorithm.</p>
-								<!-- <ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul> -->
-							</section>
-
-						</div>
-						<div class="6u 12u(narrower)">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Use case: Medicine</h3>
-								<p>In computer assisted surgery it's important to detect the surgery tools in the images. With understand.ai it is easy to get hundred thousands of labeled images where the tool is clearly marked.</p>
-								<!-- <ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul> -->
-							</section>
-
-						</div>
+			<section id="start" class="box special features">
+				<h2>Label your data in 3 simple steps:</h2>
+				<br/>
+				<div class="row">
+					<div class="col-md-4">
+						<span class="icon major accent2"><h2>1</h2></span>
+						<h3>Send us your data</h3>
+						<p>Send us a link to your data or upload your data to our servers using a secure connection. At any time we guarantee data security and confidentiality.</p>
 					</div>
+					<div class="col-md-4">
+						<span class="icon major accent5"><h2>2</h2></span>
+						<h3>We understand your data</h3>
+						<p>By combining customized machine learning methods and human intelligence, we annotate your data.</p>
+					</div>
+					<div class="col-md-4">
+						<span class="icon major accent3"><h2>3</h2></span>
+						<h3>Get back your data</h3>
+						<p>Now you can download your labeled and structured data and get started working on your actual project. It's that simple.</p>
+					</div>
+				</div>
+			</section>
 
-				</section>
+			<section class="box special features">
+				<div class="features-row">
+					<section>
+						<span class="icon major fa-rocket accent2"></span>
+						<h3>Fast</h3>
+						<p>Speed makes the difference. Don't wait until your interns finish their labeling work. Our qualified crowd delivers you results at highspeed.</p>
+					</section>
+					<section>
+						<span class="icon major fa-diamond accent3"></span>
+						<h3>Quality</h3>
+						<p>Quality is key! Don't spend hours of reviewing your labeled data. With our final in house quaility control step we make sure you get high quality results.</p>
+					</section>
+				</div>
+				<div class="features-row">
+					<section>
+						<span class="icon major fa-usd accent4"></span>
+						<h3>Cost effective</h3>
+						<p>Combining our machine learning algorithms with our crowd gives you the most cost effective way to label your data.</p>
+					</section>
+					<section>
+						<span class="icon major fa-shield accent5"></span>
+						<h3>Secure</h3>
+						<p>No worries about privacy and data protection. We put high effort in securing your data from end to end.</p>
+					</section>
+				</div>
+			</section>
 
-			<!-- CTA -->
-				<section id="cta">
+			<div class="row">
+				<div class="6u 12u(narrower)">
 
-					<h2>Get in contact now</h2>
-					<p>Concentrate on what you can do best and let us annotate your data.</p>
-					<br />
-					<form>
-						<div class="row uniform 50%">
-							<!-- <div class="8u 12u(mobilep)">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
-							</div> -->
-							<div class="12u 12u(mobilep)">
-								<!-- <a href="#" class="button special" data-toggle="modal" data-target="#myModal">Request free demo</a> -->
+					<section class="box special">
+						<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
+						<h3>Use case: Autonomous driving</h3>
+						<p>With the help of understand.ai an autonomous driving company can label the video and images which were recorded while driving. This groundtruth is the base for training a passenger or lane detection algorithm.</p>
+						<!-- <ul class="actions">
+									<li><a href="#" class="button alt">Learn More</a></li>
+								</ul> -->
+					</section>
 
-								<input id="demo-request" type="button" value="Request free demo" class="fit" class="button special lightbox-61724662942359" data-toggle="modal" data-target="#myModal"/>
+				</div>
+				<div class="6u 12u(narrower)">
+
+					<section class="box special">
+						<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
+						<h3>Use case: Medicine</h3>
+						<p>In computer assisted surgery it's important to detect the surgery tools in the images. With understand.ai it is easy to get hundred thousands of labeled images where the tool is clearly marked.</p>
+						<!-- <ul class="actions">
+									<li><a href="#" class="button alt">Learn More</a></li>
+								</ul> -->
+					</section>
+
+				</div>
+			</div>
+		</section>
+
+		<!-- CTA -->
+
+		<section id="cta">
+			<div class="container">
+				<div class="row uniform 50%">
+					<div class="6u 12u(narrower)">
+						<script type="text/javascript" src="https://form.jotformeu.com/jsform/63234295076357"></script>
+					</div>
+					<div class="6u 12u(narrower)">
+						<address class="text-left">
+						<h3>Offices</h3>
+						<div class="row paragraph">
+							<div class="6u">
+								<p>
+									Rheinsberger Str. 76/77 <br>
+									10115 Berlin <br>
+									Germany
+								</p>
+							</div>
+							<div class="6u">
+								<p>
+									Rintheimer Strasse 15<br>
+									76131 Karlsruhe<br>
+									Germany
+								</p>
 							</div>
 						</div>
-					</form>
+						<h3>Phone</h3>
+						<p>
+							<a href="tel:004915202837344">+49 152 02837344</a>
+						</p>
+						<h3>Mail</h3>
+						<p>
+							<a href="mailto:info@understand.ai?subject=contact">info@understand.ai</a>
+						</p>
+						</address>
+					</div>
+				</div>
+			</div>
+		</section>
 
-				</section>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="copyright">
+				<li><a href="#cta">Contact</a></li>
+				<li><a href="./imprint.html">Imprint</a></li>
+				<li>&copy; understand.ai. All rights reserved.</li>
+			</ul>
+		</footer>
 
+	</div>
 
-			<!-- Footer -->
-			<footer id="footer">
-								<ul class="icons">
-									<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-									<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
-									<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
-									<!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li> -->
-									<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-									<!-- <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
-								</ul>
-								<ul class="copyright">
-									<li><a href="mailto:info@understand.ai">Contact</a></li>
-									<li><a href="./imprint.html">Imprint</a></li>
-									<li>&copy; understand.ai. All rights reserved.</li>
-								</ul>
-							</footer>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script>
+		(function(i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r;
+			i[r] = i[r] || function() {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date();
+			a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0];
+			a.async = 1;
+			a.src = g;
+			m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-		</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script>
-			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-			  ga('create', 'UA-79651140-1', 'auto');
-			  ga('send', 'pageview');
-
-			</script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollgress.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/typed.js"></script>
-			<script src="assets/js/bootstrap.min.js"></script>
-			<script>
-					$(function(){
-							$(".element").typed({
-									strings: ["classify", "tag", "annotate", "label", "identify", "caption", "rate", "parse"],
-									typeSpeed: 0,
-									loop: true,
-							});
-					});
-			</script>
-			<script src="assets/js/googleanalytics.js"></script>
-			<div id="myModal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <!-- <h4 class="modal-title">Give us a taste of your data</h4> -->
-      </div>
-      <div class="modal-body">
-				<script type="text/javascript" src="https://form.jotformeu.com/jsform/61724662942359"></script>
-        <!-- <p>Upload a sample of your data and get it labeled for free. Max 100 images or 100 csv rows.</p>
-				<form action="https://getsimpleform.com/messages?form_api_token=acd9ad0f4fa3cdb323880aaac1beef11" method="post">
-					<!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-					<!-- <input type='hidden' name='redirect_to' value='https://0rland0.github.com/uploaded.html' />
-					<!-- all your input fields here.... -->
-					<!-- <label>Sample data if available (CSV, zip, ...)</label>
-					<input type="file" name="sample-data" class="form-control">
-					<label>How should the result look like?</label>
-					<input type='text' name='task-description' placeholder='E.g. each image should be labeled as cat or dog' />
-					<label>Your name?</label>
-					<input type='text' name='name' placeholder='e.g. John Doe'/>
-					<label>Company Name</label>
-					<input type='text' name='company-name' placeholder='e.g. Willy Wonka Inc.'/>
-					<label>Phone number</label>
-					<input type='text' name='phone-number' placeholder='e.g. +49 176 41648137' />
-					<label>Email</label>
-					<input type='text' name='email' placeholder='e.g. foo@bar.com'/>
-					<input type='submit' value='Submit' />
-				</form> -->
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
-  </div>
-</div>
-	</body>
+		ga('create', 'UA-79651140-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/typed.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/main.js"></script>
+</body>
 </html>
