Change diamond icon to trophy

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<p>Speed makes the difference. Don't wait until your interns finish their labeling work. Our qualified crowd delivers you results at highspeed.</p>
 					</section>
 					<section>
-						<span class="icon major fa-diamond accent3"></span>
+						<span class="icon major fa-trophy accent3"></span>
 						<h3>Quality</h3>
 						<p>Quality is key! Don't spend hours of reviewing your labeled data. With our final in house quaility control step we make sure you get high quality results.</p>
 					</section>
