Rearrange office information and add details

--- a/index.html
+++ b/index.html
@@ -145,31 +145,50 @@
 					</div>
 					<div class="6u 12u(narrower)">
 						<address class="text-left">
-						<h3>Offices</h3>
-						<div class="row paragraph">
-							<div class="6u">
-								<p>
-									Rheinsberger Str. 76/77 <br>
-									10115 Berlin <br>
-									Germany
-								</p>
+							<div class="row">
+								<div class="6u">
+									<h3>Berlin</h3>
+									<p>
+										Rheinsberger Str. 76/77 <br>
+										10115 Berlin <br>
+										Germany
+									</p>
+								</div>
+								<div class="6u">
+									<h3>Karlsruhe</h3>
+									<p>
+										Rintheimer Strasse 15<br>
+										76131 Karlsruhe<br>
+										Germany
+									</p>
+								</div>
 							</div>
-							<div class="6u">
-								<p>
-									Rintheimer Strasse 15<br>
-									76131 Karlsruhe<br>
-									Germany
-								</p>
+							<h3>Phone</h3>
+							<div class="row">
+								<div class="6u">
+									<p>
+										<a href="tel:004915202837344">+49 152 02837344</a>
+									</p>
+								</div>
+								<div class="6u">
+									<p>
+										<a href="tel:004917657989138">+49 176 57989138</a>
+									</p>
+								</div>
 							</div>
-						</div>
-						<h3>Phone</h3>
-						<p>
-							<a href="tel:004915202837344">+49 152 02837344</a>
-						</p>
-						<h3>Mail</h3>
-						<p>
-							<a href="mailto:info@understand.ai?subject=contact">info@understand.ai</a>
-						</p>
+							<h3>Mail</h3>
+							<div class="row">
+								<div class="6u">
+									<p>
+										<a href="mailto:berlin@understand.ai?subject=contact">berlin@understand.ai</a>
+									</p>
+								</div>
+								<div class="6u">
+									<p>
+										<a href="mailto:karlsruhe@understand.ai?subject=contact">karlsruhe@understand.ai</a>
+									</p>
+								</div>
+							</div>
 						</address>
 					</div>
 				</div>
