Add slider to demo pages

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="http://email.tl.fortawesome.com/c/eJxNjUEOgyAQRU8jSzIzouCCRZOm9xhhiDaKDWB6_bJs8vMWf_Fe9FHmKFbtngBnxE4cLYBGstZ0OuM0TmjoiTgYaIdOV2n8lXqdosN1qs1HSABuldWtc7QcSMaE0zIxEpFlUoffWvvUYXwM9Oq7q3RN_tf0Nzg27JZgQb-rKj4dV9k59-qdo5TaOEfN-w_GczYM"></script>
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/style.css"> <!-- Resource style -->
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 </head>
 
@@ -24,7 +25,7 @@
 			<h2><a href="index.html">understand.ai</a></h2>
 			<nav id="nav">
 				<ul>
-					<!-- <li><a href="#demo">Product</a></li> -->
+					<li><a href="#demo">Product</a></li>
 					<li><a href="#start">Get Started</a></li>
 					<!-- <li><a href="/about.html">About us</a></li> -->
 					<li><a href="#cta">Contact</a></li>
@@ -54,9 +55,22 @@
 						to your needs. </p>
 				</header>
 			</section>
-			<!-- <section id="product" class="box special features">
-				<h2>Products</h2>
-			</section> -->
+
+			<section id="demo" class="box special features">
+				<h2>Pixelwise Sementic Segmentation</h2>
+				<figure class="cd-image-container">
+					<img src="assets/css/images/img-original.jpg" alt="Original Image">
+					<span class="cd-image-label" data-type="original">Original</span>
+
+					<div class="cd-resize-img">
+						<!-- the resizable image on top -->
+						<img src="assets/css/images/img-modified.jpg" alt="Modified Image">
+						<span class="cd-image-label" data-type="modified">Segmentation</span>
+					</div>
+
+					<span class="cd-handle"></span>
+				</figure>
+			</section>
 
 			<section class="box special features">
 				<div class="features-row">
@@ -231,5 +245,7 @@
 	<script src="assets/js/typed.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/slider.js"></script>
 </body>
+
 </html>
